// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display tag with custom element 1`] = `
<DocumentFragment>
  <div
    class="css-1u7dvmo"
    data-chakra-component="CBox"
  >
    <div
      class="css-fzcsno css-1v8giig"
      data-chakra-component="CTag"
    >
      <div
        class="css-1cm55yf"
        data-chakra-component="CAvatar"
      >
        <div
          aria-label="Mesut Koca"
          class="css-1wti8hy"
          data-chakra-component="CAvatarName"
        >
          MK
        </div>
      </div>
       
      <span
        class="css-e1yiz6"
        data-chakra-component="CTagLabel"
      >
        Mesut
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should display tag with right icon 1`] = `
<DocumentFragment>
  <div
    class="css-1u7dvmo"
    data-chakra-component="CBox"
  >
    <div
      class="css-fzcsno css-h304f4"
      data-chakra-component="CTag"
    >
      <span
        class="css-e1yiz6"
        data-chakra-component="CTagLabel"
      >
        Green
      </span>
       
      <svg
        class="css-1w7qkv4 css-y3asau css-9r03b"
        data-chakra-component="CTagIcon"
        role="presentation"
        size="12px"
        viewBox="0 0 24 24"
      >
        
    
        <path
          d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
          fill="currentColor"
        />
        
    
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1u7dvmo"
    data-chakra-component="CBox"
  >
    <div
      class="css-fzcsno css-h304f4"
      data-chakra-component="CTag"
    >
      <svg
        class="css-1w7qkv4 css-y3asau css-9r03b"
        data-chakra-component="CTagIcon"
        role="presentation"
        size="12px"
        viewBox="0 0 24 24"
      >
        
    
        <path
          d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
          fill="currentColor"
        />
        
    
      </svg>
       
      <span
        class="css-e1yiz6"
        data-chakra-component="CTagLabel"
      >
        Green
      </span>
    </div>
  </div>
</DocumentFragment>
`;
